--- a/quiz#1.html
+++ b/quiz#1.html
@@ -1,16 +1,20 @@
-<html> 
-    <head>   
-        <title>My Document</title> 
-          <script type="text/javascript"> 
-            function change() {     var header = document.getElementById("hid123");  
-               header.innerHTML = "CSIE@CGU";   
-                var para = document.getElementById("pid123");   
-               para.innerHTML = "怎麼那麼棒！！.";   }    
-         </script> 
-         </head> 
-                     <body>   
-                         <input type="button" value="Change this document." onclick="change()">  
-                          <h1 id="hid123">CGU</h1>  
-                           <p id="pid123">好棒棒</p> 
-                    </body>
-     </head>
+<html>
+
+<head>
+  <title>My Document</title>
+  <script type="text/javascript">
+    function change() {
+      var header = document.getElementById("2222");
+      header.innerHTML = "CSIE@CGU";
+      var para = document.getElementById("3333");
+      para.innerHTML = "怎麼那麼棒！！.";
+    }
+  </script>
+</head>
+
+<body>
+  <input type="button" value="Change this document." onclick="change()">
+  <h1 id="2222">CGU</h1>
+  <p id="3333">好棒棒</p>
+</body>
+</head>
