--- a/quiz#1.html
+++ b/quiz#1.html
@@ -1,20 +1,27 @@
+<!DOCTYPE html>
 <html>
 
 <head>
   <title>My Document</title>
   <script type="text/javascript">
+    function addBtn() {
+      var Btn = document.createElement("BUTTON");
+      Btn.innerHTML = "Change this document.";
+      document.body.appendChild(Btn);
+      Btn.addEventListener("click", change);
+    }
+
     function change() {
-      var header = document.getElementById("2222");
+      var header = document.getElementById("Hid");
       header.innerHTML = "CSIE@CGU";
-      var para = document.getElementById("3333");
+      var para = document.getElementById("Pid");
       para.innerHTML = "怎麼那麼棒！！.";
     }
   </script>
 </head>
 
 <body>
-  <input type="button" value="Change this document." onclick="change()">
-  <h1 id="2222">CGU</h1>
-  <p id="3333">好棒棒</p>
+  <input type="button" onclick="addBtn()" value="Try it">
+  <h1 id="Hid">CGU</h1>
+  <p id="Pid">好棒棒</p>
 </body>
-</head>
