--- a/quiz#1.html
+++ b/quiz#1.html
@@ -3,7 +3,21 @@
 
 <head>
   <title>My Document</title>
+  <script type="text/javascript">
+    function addBtn() {
+      var Btn = document.createElement("BUTTON");
+      Btn.innerHTML = "Change this document.";
+      document.body.appendChild(Btn);
+      Btn.addEventListener("click", change);
+    }
 
+    function change() {
+      var header = document.getElementById("Hid");
+      header.innerHTML = "CSIE@CGU";
+      var para = document.getElementById("Pid");
+      para.innerHTML = "怎麼那麼棒！！.";
+    }
+  </script>
 </head>
 
 <body>
