--- a/quiz#1.html
+++ b/quiz#1.html
@@ -3,25 +3,21 @@
 
 <head>
   <title>My Document</title>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script type="text/javascript">
-    function addBtn() {
-      var Btn = document.createElement("BUTTON");
-      Btn.innerHTML = "Change this document.";
-      document.body.appendChild(Btn);
-      Btn.addEventListener("click", change);
-    }
-
-    function change() {
-      var header = document.getElementById("Hid");
-      header.innerHTML = "CSIE@CGU";
-      var para = document.getElementById("Pid");
-      para.innerHTML = "怎麼那麼棒！！.";
-    }
+    $(document).ready(function () {
+      $("input").click(function () {
+        $("h1").text("CSIE@CGU");
+        $("p").text("怎麼那麼棒！！");
+      });
+    });
   </script>
 </head>
 
 <body>
-  <input type="button" onclick="addBtn()" value="Try it">
-  <h1 id="Hid">CGU</h1>
-  <p id="Pid">好棒棒</p>
+  <input type="button" onclick="change()" value="Change this document.">
+  <h1 id="HID">CGU</h1>
+  <p id="PID">好棒棒</p>
 </body>
+
+</html>
