--- a/quiz3.html
+++ b/quiz3.html
@@ -9,6 +9,7 @@
 
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"> </script>
+    <script type="text/javascript" src="quiz3.js"></script>
 </body>
 
 </html>
