--- a/quiz2.html
+++ b/quiz2.html
@@ -4,5 +4,5 @@
 <div id="contain"></div>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js">
 </script>
-
+<script type="text/javascript" src="quiz2.js"></script>
 </html>
